@@ -167,12 +167,12 @@ REPOSITORY
     <https://github.com/tupinek/Class-Utils>
 
 AUTHOR
-    Michal Špaček <mailto:skim@cpan.org>
+    Michal Josef Špaček <mailto:skim@cpan.org>
 
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-     © Michal Špaček 2011-2015
+     © Michal Josef Špaček 2011-2015
      BSD 2-Clause License
 
 VERSION
