@@ -281,13 +281,13 @@ L<https://github.com/tupinek/Class-Utils>
 
 =head1 AUTHOR
 
-Michal Špaček L<mailto:skim@cpan.org>
+Michal Josef Špaček L<mailto:skim@cpan.org>
 
 L<http://skim.cz>
 
 =head1 LICENSE AND COPYRIGHT
 
- © Michal Špaček 2011-2015
+ © Michal Josef Špaček 2011-2015
  BSD 2-Clause License
 
 =head1 VERSION
