@@ -1,5 +1,6 @@
 0.08
  - Update Module::Install to 1.19 version.
+ - Update author name.
 
 0.07 2015-09-27T17:57:34+02:00
  - Improve EXAMPLE5 section in doc.
